# ascend

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: gcc.yml  msvc.yml
include/ascend/: Create.h  Factory.h  ReadJSON.h  StringHash.h  WriteJSON.h
src/: CMakeLists.txt  Create.cpp  Factory.cpp  ReadJSON.cpp  WriteJSON.cpp
test/: CMakeLists.txt  Create.test.cpp  Factory.test.cpp  WriteJSON.test.cpp
